--- a/supervisord.conf
+++ b/supervisord.conf
@@ -74,3 +74,23 @@ stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/fd/2
 stderr_logfile_maxbytes=0
+
+[program:twitch-stream]
+command=ffmpeg
+    -vaapi_device /dev/dri/renderD128
+    -f x11grab -video_size 1920x1080 -framerate 30 -i :99
+    -f pulse -i default
+    -vf format=nv12,hwupload
+    -c:v h264_vaapi -b:v 4500k -maxrate 6000k -bufsize 12000k -g 60
+    -c:a aac -b:a 128k -ar 44100
+    -f flv rtmp://live.twitch.tv/app/%(ENV_TWITCH_STREAM_KEY)s
+user=quest
+environment=DISPLAY=":99",HOME="/home/quest"
+autostart=%(ENV_TWITCH_AUTOSTART)s
+autorestart=true
+priority=60
+startsecs=10
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/fd/2
+stderr_logfile_maxbytes=0
